DigicielFull/force-app/main/default/objects/DealHub__DealHub_Quote_Workflow__c/DealHub__DealHub_Quote_Workflow__c.object-meta.xml
<CustomObject>
    <label>DealHub Quote Workflow</label>
    <nameField>
        <label>Dealhub Quote Workflow Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DealHub Quote Workflows</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>