DigicielFull/force-app/main/default/objects/DealHub__DealHub_Quote_Workflow__c/fields/DealHub__Quote__c.field-meta.xml
<CustomField>
    <fullName>DealHub__Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipName>DealHub_Quote_Workflows</relationshipName>
    <type>Lookup</type>
</CustomField>