DigicielFull/force-app/main/default/objects/DealHub__DealHub_Quote_Workflow__c/fields/DealHub__Reasons__c.field-meta.xml
<CustomField>
    <fullName>DealHub__Reasons__c</fullName>
    <label>Reasons</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>