DigicielFull/force-app/main/default/objects/DealHub__DealHub_Quote_Workflow__c/fields/DealHub__Status_Date__c.field-meta.xml
<CustomField>
    <fullName>DealHub__Status_Date__c</fullName>
    <label>Status Date</label>
    <type>DateTime</type>
</CustomField>