DigicielFull/force-app/main/default/objects/DealHub__DealHub_Quote_Workflow__c/fields/DealHub__User_Name__c.field-meta.xml
<CustomField>
    <fullName>DealHub__User_Name__c</fullName>
    <label>User Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>